<resources>
    <string name="app_name">WeatherAndroid</string>
    <string name="town">Town</string>
    <string name="temperature">Temperature</string>
    <string name="status">status</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="day_of_week">day of week</string>
    <string name="status_of_day">status_of_day</string>
    <string name="temp_min_of_day">temp_min_of_day</string>
    <string name="temp_max_of_day">temp_max_of_day</string>
    <string name="setting">setting</string>
    <string name="location">location</string>
    <string name="style">style</string>
    <string name="info">info</string>
</resources>