<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/day_of_week"

        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_of_day"
        android:id="@+id/con"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal">

    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temp_min_of_day"
        android:id="@+id/tmin"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temp_max_of_day"
        android:id="@+id/tmax"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal">
    </TextView>


</LinearLayout>